fixed link and styling overflow y of content wrapper, prompt buttons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -150,10 +150,12 @@ input[type="number"] {
 }
 
 #page-content-wrapper {
+  height: 90vh;
   min-width: 0;
   background-color: #f5f5f5;
   border-top-left-radius: 30px;
   padding: 5px 25px;
+  overflow-y: scroll;
 }
 
 #sidebar-wrapper a {
